--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,31 +2,57 @@
 <html>
 <head>
   <title>Calculator</title>
+  <link href="/styles/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/style.css" />
   <script type="text/javascript" src="/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="/scripts/clientapp.js"></script>
 </head>
 <body>
-  <h1>Calculator</h1>
   <div id="calculator-pad">
-    <button class="number" data-id="1">1</button>
-    <button class="number" data-id="2">2</button>
-    <button class="number" data-id="3">3</button>
-    <button class="number" data-id="4">4</button>
-    <button class="number" data-id="5">5</button>
-    <button class="number" data-id="6">6</button>
-    <button class="number" data-id="7">7</button>
-    <button class="number" data-id="8">8</button>
-    <button class="number" data-id="9">9</button>
-    <button class="number" data-id="0">0</button>
-    <button class="operator" data-id="add">+</button>
-    <button class="operator" data-id="subtract">-</button>
-    <button class="operator" data-id="multiply">*</button>
-    <button class="operator" data-id="divide">/</button>
-    <button class="equals">=</button>
-    <button class="clear">CLEAR</button>
+    <div class="results">0</div>
+      <div class="container">
+		    <div class="row">
+		        <div class="col-md-8">
+              <button class="number" data-id="7">7</button>
+              <button class="number" data-id="8">8</button>
+              <button class="number" data-id="9">9</button>
+              <button class="operator" data-id="divide">/</button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+		    <div class="row">
+		        <div class="col-md-8">
+              <button class="number" data-id="4">4</button>
+              <button class="number" data-id="5">5</button>
+              <button class="number" data-id="6">6</button>
+              <button class="operator" data-id="multiply">*</button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+		    <div class="row">
+		        <div class="col-md-8">
+              <button class="number" data-id="1">1</button>
+              <button class="number" data-id="2">2</button>
+              <button class="number" data-id="3">3</button>
+              <button class="operator" data-id="subtract">-</button>
+            </div>
+        </div>
+      </div>
+    <div class="container">
+		    <div class="row">
+		        <div class="col-md-8">
+              <button class="number" data-id="0">0</button>
+              <button class="number" data-id=".">.</button>
+              <button class="equals">=</button>
+              <button class="operator" data-id="add">+</button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <button class="clear">CLEAR</button>
+    </div>
   </div>
-  <h2>Results</h2>
-  <div id="results">0</div>
 </body>
 </html>
